fix styling horizontal overflow; add style for section headers and content

--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,11 @@
   top: 0;
   left: 0;
   z-index: 2;
-  width: 100%;
-  height: 75px;
+  width: 100vw;
+  max-width: 100%;
+  height: 5vw;
   display: grid;
-  grid-template-columns: 50px auto 150px;
+  grid-template-columns: 100px auto 150px;
   background-color: rgb(41, 2, 2);
 }
 
@@ -40,7 +41,8 @@
 }
 
 .header-logo {
-  height: 50px;
+  width: 600px;
+  /* height: 50px; */
 }
 
 .header-translate {
@@ -49,14 +51,14 @@
   align-items: center;
 }
 
-#home {
+.section {
   height: 100vh;
 }
 
-#home .main-logo-wrapper {
+.main-logo-wrapper {
 }
 
-#home .main-logo-wrapper img {
+.main-logo-wrapper img {
   position: absolute;
   z-index: 1;
   margin-left: auto;
@@ -65,22 +67,51 @@
   right: 0;
   width: 500px;
 }
-/* 
-#home .carousel img {
-  width: 100%;
-} */
 
-.bg {
+.carousel-img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
+  max-width: 100%;
   background-size: cover;
   background-position: center;
   will-change: opacity;
 }
 
-.about {
-  height: 100%;
+#about {
+  margin-top: 0px;
 }
+
+.about-layout {
+  display: grid;
+  grid-template-columns: 40fr 60fr;
+}
+
+.menu-layout {
+  display: grid;
+  grid-template-columns: 40fr 60fr;
+}
+
+.section-header-wrapper {
+  display: grid;
+  height: 100vh;
+  align-items: center;
+  background-color: rgb(41, 2, 2);
+}
+
+.section-content-wrapper {
+  display: grid;
+  align-items: center;
+  text-align: center;
+  /* background-color: rgb(53, 41, 41); */
+  padding: 20%;
+}
+
+h1 {
+  font-size: 5rem;
+  text-align: center;
+}
+
+/* grid-template-columns: 50px auto 150px; */
